[package]
name = "rust-dtls-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = "z"
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
riot-wrappers = { git = "https://github.com/Remmirad/rust-riot-wrappers.git", branch = "embedded-nal-async-0.8.0", features = [ "with_embedded_nal", "set_panic_handler", "panic_handler_format"] }
embedded-nal = "0.6.0"
rusty-dtls = { git  = "ssh://git@github.com/ATACAMA-Project/rusty-dtls.git", features = ["aes128gcm_sha256", "silent"], optional = true}
embedded-time = { version = "0.12.1", default-features = false }
log = "0.4.21"

rust_riotmodules = { path = "../../sys/rust_riotmodules/" }

[features]
dtls = ["rusty-dtls"]
netqueue = []
