[package]
name = "rust-dtls-uart-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = "z"
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
riot-wrappers = { version = "0.9.2", features = [ "set_panic_handler", "panic_handler_format"] }
rusty-dtls = { git  = "ssh://git@github.com/ATACAMA-Project/rusty-dtls.git", features = ["aes128gcm_sha256", "silent"], optional = true}
chunky = { git = "https://gitlab.informatik.uni-bremen.de/mfreiwal/chunky.git" }
log = "0.4.21"

rust_riotmodules = { path = "../../sys/rust_riotmodules/" }

[patch.crates-io]
# riot-sys = { git = "https://github.com/RIOT-OS/rust-riot-sys.git" }
# riot-wrappers = { git = "https://github.com/RIOT-OS/rust-riot-wrappers.git" }

[features]

dtls = ["rusty-dtls"]
